--- a/index.html
+++ b/index.html
@@ -40,15 +40,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="collapsibleNavId">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					<li class="nav-item dropdown text-uppercase">
-						<a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">О компании</a>
-						<div class="dropdown-menu" aria-labelledby="dropdownId">
-							<a class="dropdown-item" href="#">История развития</a>
-							<a class="dropdown-item" href="#">Lorem, ipsum.</a>
-							<a class="dropdown-item" href="#">Lorem, ipsum.</a>
-							<a class="dropdown-item" href="#">Новости</a>
-						</div>
+					<li class="nav-item text-uppercase">
+						<a class="nav-link" href="#">О компании</a>
 					</li>
 					<li class="nav-item text-uppercase">
 						<a class="nav-link" href="#">Услуги</a>
@@ -76,31 +69,29 @@
 			<div id="collapseOne" class="collapse show" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-4">
-							<div class="services">АО «УВК» производит капитальный, деповской ремонт полувагонов, а так
-								же
-								текущий ремонт в объеме ТР-1 и ТР-2.
-
-								Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
-								производится с гарантией качества, обеспечивающей эксплуатацию подвижного состава на
-								весь
-								период до следующего планового ремонта</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-4">
-							<div class="services"><img src="img/repair-vagon.jpg" width="300" alt="serv-img"></div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-12 col-lg-12 col-xl-4">
+						<div class="col-12 col-sm-12 col-md-12  col-lg-12 col-xl-6">
 							<div class="services">
+								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так
+									же текущий ремонт в объеме ТР-1 и ТР-2.
+									Наша компания является стратегическим партнером «Научно - производственной
+									корпорации «Объединенная Вагонная Компания» по обслуживанию и ремонту грузовых
+									вагонов на тележках Барбер производства Тихвинского вагоностроительного завода.
+									Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
+									производится с гарантией качества, обеспечивающей эксплуатацию подвижного состава на
+									весь период до следующего планового ремонта</p>
 								<ul>
 									<h5>Мы ремонтируем:</h5>
-									<li><img src="img/cov.png" alt="vagon" width="90"> -Крытые вагоны</li>
-									<li><img src="img/poluvagon.png" alt="vagon" width="90"> - Полувагоны</li>
-									<li><img src="img/platform.png" alt="vagon" width="90"> - Платформы </li>
-									<li><img src="img/platform_c.png" alt="vagon" width="90"> - Платформы </li>
-									<li><img src="img/hopper.png" alt="vagon" width="90"> - Хопперы</li>
+									<li><img src="img/vagon.png" alt="vagon"> -Крытые вагоны</li>
+									<li><img src="img/poluvagon.png" alt="vagon"> - Полувагоны</li>
+									<li><img src="img/platform.png" alt="vagon"> - Платформы </li>
+									<li><img src="img/platform_c.png" alt="vagon"> - Платформы </li>
+									<li><img src="img/hopper.png" alt="vagon"> - Хопперы</li>
 
 								</ul>
 							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-6">
+							<div class="services"><img src="img/repair-vagon.jpg"  alt="serv-img"></div>
 						</div>
 					</div>
 				</div>
@@ -266,16 +257,20 @@
 		<h4>Наши партнеры:</h4>
 		<div class="row">
 			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="#" class="grs"><img src="img/partners/grs.png" alt="partners"></a>
+				<a href="http://garantrs.com" rel="noopener noreferrer" target="_blank" class="grs"><img
+						src="img/partners/grs.png" alt="partners"></a>
 			</div>
 			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="#" class="mmk"><img src="img/partners/mmk.png" alt="partners"></a>
+				<a href="http://mmk.ru" rel="noopener noreferrer" target="_blank" class="mmk"><img
+						src="img/partners/mmk.png" alt="partners"></a>
 			</div>
 			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="#" class="np"><img src="img/partners/np.png" alt="partners"></a>
+				<a href="https://npktrans.ru" rel="noopener noreferrer" target="_blank" class="np"><img
+						src="img/partners/np.png" alt="partners"></a>
 			</div>
 			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="#" class="tgk"><img src="img/partners/tgk.png" alt="partners"></a>
+				<a href="http://zaotgk.ru" rel="noopener noreferrer" target="_blank" class="tgk"><img
+						src="img/partners/tgk.png" alt="partners"></a>
 			</div>
 		</div>
 	</div>
@@ -294,10 +289,12 @@
 					техники и в составе Globaltrans.</p>
 				<div class="row">
 					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-						<img src="img/partners/globaltrans.png" height="40" alt="globaltrans">
+						<a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
+								src="img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
 					</div>
 					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-						<img src="img/partners/opzt.png" height="70" alt="opzt">
+						<a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
+								src="img/partners/opzt.png" height="70" alt="opzt"></a>
 					</div>
 				</div>
 			</div>
