--- a/index.html
+++ b/index.html
@@ -72,19 +72,18 @@
 						<div class="col-12 col-sm-12 col-md-12  col-lg-12 col-xl-6">
 							<div class="services">
 								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так
-									же текущий ремонт в объеме ТР-1 и ТР-2.
-									Наша компания является стратегическим партнером «Научно - производственной
+									же текущий ремонт в объеме ТР-1 и ТР-2.</p>
+									<p>Наша компания является стратегическим партнером «Научно - производственной
 									корпорации «Объединенная Вагонная Компания» по обслуживанию и ремонту грузовых
-									вагонов на тележках Барбер производства Тихвинского вагоностроительного завода.
-									Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
+									вагонов на тележках Барбер производства Тихвинского вагоностроительного завода.</p>
+									<p>Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
 									производится с гарантией качества, обеспечивающей эксплуатацию подвижного состава на
 									весь период до следующего планового ремонта</p>
 								<ul>
 									<h5>Мы ремонтируем:</h5>
-									<li><img src="img/vagon.png" alt="vagon"> -Крытые вагоны</li>
+									<li class="test">- Крытые вагоны</li>
 									<li><img src="img/poluvagon.png" alt="vagon"> - Полувагоны</li>
 									<li><img src="img/platform.png" alt="vagon"> - Платформы </li>
-									<li><img src="img/platform_c.png" alt="vagon"> - Платформы </li>
 									<li><img src="img/hopper.png" alt="vagon"> - Хопперы</li>
 
 								</ul>
