--- a/index.html
+++ b/index.html
@@ -73,26 +73,58 @@
 							<div class="services">
 								<p>АО «УВК» производит капитальный, деповской ремонт полувагонов, а так
 									же текущий ремонт в объеме ТР-1 и ТР-2.</p>
-									<p>Наша компания является стратегическим партнером «Научно - производственной
+								<p>Наша компания является стратегическим партнером «Научно - производственной
 									корпорации «Объединенная Вагонная Компания» по обслуживанию и ремонту грузовых
 									вагонов на тележках Барбер производства Тихвинского вагоностроительного завода.</p>
-									<p>Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
+								<p>Благодаря современному оборудованию и высококвалифицированным специалистам ремонт
 									производится с гарантией качества, обеспечивающей эксплуатацию подвижного состава на
 									весь период до следующего планового ремонта</p>
-								<ul>
-									<h5>Мы ремонтируем:</h5>
-									<li class="test">- Крытые вагоны</li>
-									<li><img src="img/poluvagon.png" alt="vagon"> - Полувагоны</li>
-									<li><img src="img/platform.png" alt="vagon"> - Платформы </li>
-									<li><img src="img/hopper.png" alt="vagon"> - Хопперы</li>
-
-								</ul>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium, asperiores
+									ex culpa similique temporibus aspernatur iusto quidem odio! Sunt eos vero ex
+									quibusdam expedita nostrum id quo quod commodi rem perspiciatis, dolor in libero
+									eligendi veniam veritatis necessitatibus sed, voluptas adipisci fugiat minus? Quis
+									dolore ex minima, natus molestiae dicta, temporibus aspernatur voluptate dolorum cum
+									fugiat, commodi itaque! Inventore excepturi, aperiam voluptatum maxime, expedita
+									officiis iure laboriosam quos placeat ea commodi nam ab. Voluptatem veritatis rem
+									ducimus accusantium voluptatibus?</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-md-12  col-lg-12 col-xl-6">
-							<div class="services"><img src="img/repair-vagon.jpg"  alt="serv-img"></div>
+							<div class="services"><img src="img/repair-vagon.jpg" alt="serv-img" class="rounded"></div>
 						</div>
 					</div>
+					<h5>Мы ремонтируем:</h5>
+					<div class="row">
+
+						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+							<div class="rc">
+								<img src="img/cov/cov.png" alt="vagon" class="cov">
+								<p>Крытые вагоны</p>
+							</div>
+						</div>
+						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+							<div class="rc">
+								<img src="img/cov/poluvagon.png" alt="vagon" class="half-cov">
+								<p>Полувагоны</p>
+							</div>
+						</div>
+						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+							<div class="rc">
+								<img src="img/cov/platform.png" alt="vagon" class="platform">
+								<p>Платформы</p>
+							</div>
+						</div>
+						<div class="col-12 col-sm-12 col-md-6  col-lg-3 col-xl-3 d-flex flex-wrap align-content-end">
+							<div class="rc">
+								<img src="img/cov/hopper.png" alt="vagon" class="hopper">
+								<p>Хопперы</p>
+							</div>
+						</div>
+
+
+
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -105,37 +137,29 @@
 			<div id="collapseTwo" class="collapse" data-parent="#accordion">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">
+						<div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
 							<div class="services">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolor
-								accusantium magnam debitis iusto rerum dicta modi? Praesentium excepturi facilis quia
-								similique exercitationem neque totam iure optio, quis dolore est repellat nesciunt iste
-								fugit illum nihil amet magni in nulla ipsa voluptas commodi necessitatibus tenetur.
-								Voluptatem sunt minus nam esse magni maxime velit et quibusdam ad vitae! Obcaecati qui
-								magnam alias quisquam quo corporis fuga ratione! Dolore odio quod autem temporibus
-								voluptas,
-								minus fugiat tempore, atque qui ab asperiores ex.
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-12 col-lg-12 col-xl-4">
-							<div class="services"><img src="img/news.png" width="300" alt="serv-img"></div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-12 col-lg-12 col-xl-4">
-							<div class="services">
+								<p>«УВК» предоставляет услуги по текущему, среднему и капитальному ремонту
+									колесных пар.<br>
+									Ремонт колесных пар со сменой элементов с использованием материалов и запасных
+									частей собственности АО «УВК», а также собственности заказчика.
+									Наш персонал прошел обучение и имеет право производить ремонт колесных пар,
+									оборудованных кассетными подшипниками торговых марок BRENKO,SKF, TIMKEN , а
+									также сдвоенных типа CRU Duplex, производства АО «ХАРП.</p>
+								<h5>Колесно-роликовый цех состоит из:</h5>
 								<ul>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-									<li>Lorem, ipsum dolor.</li>
-
+									<li>Участок ремонта колесных пар со сменой элементов (ВКМ);</li>
+									<li> Участок ремонта колесных пар обыкновенного и полного освидетельствования и
+										ремонта подшипников.</li>
 								</ul>
+								<p>Основная технологическая линия обеспечивается межстаночным транспортным
+									оборудованием, определяющими элементами которого являются автоматические склады
+									- накопители колёс и осей с высокой степенью механизации основных, контрольных и
+									вспомогательных процессов.</p>
 							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-6">
+							<div class="services"><img src="img/repair-pair.jpg" alt="serv-img" class="rounded"></div>
 						</div>
 					</div>
 				</div>
@@ -144,81 +168,52 @@
 	</div>
 	</div>
 
-	<!-- Новости 
-<div class="block">
-	<h4>Новости</h4>
-	<div class="row">
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block ">
-				<h4>Lorem, ipsum.</h4>
-
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
-
+	<!-- Новости -->
+	<div class="block">
+		<h4>Новости:</h4>
+		<div class="row">
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block ">
+					<h5>Дата</h5>
+					<img src="img/news.png" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam vitae earum voluptate mollitia reiciendis voluptates.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h5>01.05.2019</h5>
+					<img src="img/newsh.JPG" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Сегодня сотрудники компании «УВК» приняли участие в демонстрации посвещенной  1 мая.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h5>26.06.2019</h5>
+					<img src="img/news-2.jpg" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Сегодня на территории «УВК» был проведен субботник. В ходе него была убрана близлежащия
+							территория и обновлена разметка на парковке.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h5>06.04.2019</h5>
+					<img src="img/news-3.jpg" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Сегодня работники компании приняли участия в спортивных мероприятия приуроченных к Lorem,
+							ipsum.</p>
+					</a>
+				</div>
 			</div>
 		</div>
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block">
-				<h4>Lorem, ipsum.</h4>
 
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
 
-			</div>
-		</div>
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block">
-				<h4>Lorem, ipsum.</h4>
-
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
-
-			</div>
-		</div>
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block">
-				<h4>Lorem, ipsum.</h4>
-
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
-
-			</div>
-		</div>
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block">
-				<h4>Lorem, ipsum.</h4>
-
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
-
-			</div>
-		</div>
-		<div class="col-12 col-sm-12 col-md-6 col-xl-4">
-			<div class="news-block">
-				<h4>Lorem, ipsum.</h4>
-
-				<img src="img/news.png" width="340" alt="news-img">
-				<div class="news-text"><a href="#" class="stretched-link">Lorem ipsum dolor sit amet consectetur
-						adipisicing elit. Odio dolores facilis ad modi? Nesciunt, earum consequatur fugiat iure esse
-						possimus doloribus a. Aspernatur hic qui vel tempore modi, sequi excepturi?</a></div>
-
-			</div>
-		</div>
-	</div>
-</div>
--->
-
-	<!-- Партнеры слайдер
+		<!-- Партнеры слайдер
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
 		<h4>Наши партнеры:</h4>
 		<div class="carousel-inner" role="listbox">
@@ -251,78 +246,99 @@
 		</div>
 	</div> 
 -->
-	<!-- Партнеры v.2 -->
-	<div class="block-partners">
-		<h4>Наши партнеры:</h4>
-		<div class="row">
-			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="http://garantrs.com" rel="noopener noreferrer" target="_blank" class="grs"><img
-						src="img/partners/grs.png" alt="partners"></a>
-			</div>
-			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="http://mmk.ru" rel="noopener noreferrer" target="_blank" class="mmk"><img
-						src="img/partners/mmk.png" alt="partners"></a>
-			</div>
-			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="https://npktrans.ru" rel="noopener noreferrer" target="_blank" class="np"><img
-						src="img/partners/np.png" alt="partners"></a>
-			</div>
-			<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
-				<a href="http://zaotgk.ru" rel="noopener noreferrer" target="_blank" class="tgk"><img
-						src="img/partners/tgk.png" alt="partners"></a>
-			</div>
-		</div>
-	</div>
-	<!-- Футер -->
-	<footer>
-		<div class="row">
-			<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
-				<p>АО «Уральская вагоноремонтная компания»<br>
-					455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
-					Телефон +7 (3519) 24-86-24<br>
-					Факс +7 (3519) 24-86-22<br>
-					Е-mail secretary@uvrk.ru</p>
-			</div>
-			<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
-				<p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
-					техники и в составе Globaltrans.</p>
-				<div class="row">
-					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-						<a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
-								src="img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
-					</div>
-					<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
-						<a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
-								src="img/partners/opzt.png" height="70" alt="opzt"></a>
-					</div>
+		<!-- Партнеры v.2 -->
+		<div class="block-partners">
+			<h4>Наши партнеры:</h4>
+			<div class="row">
+				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+					<a href="http://garantrs.com" rel="noopener noreferrer" target="_blank" class="grs"><img
+							src="img/partners/grs.png" alt="partners"></a>
+				</div>
+				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+					<a href="http://mmk.ru" rel="noopener noreferrer" target="_blank" class="mmk"><img
+							src="img/partners/mmk.png" alt="partners"></a>
+				</div>
+				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+					<a href="https://npktrans.ru" rel="noopener noreferrer" target="_blank" class="np"><img
+							src="img/partners/np.png" alt="partners"></a>
+				</div>
+				<div class="d-flex justify-content-center col-sm-6 col-6 col-md-6 col-xl-3 partners">
+					<a href="http://zaotgk.ru" rel="noopener noreferrer" target="_blank" class="tgk"><img
+							src="img/partners/tgk.png" alt="partners"></a>
 				</div>
 			</div>
 		</div>
-	</footer>
-	<script>
-		$(document).ready(function () {
-			$('.grs').tooltip({
-				title: "Гарант рейл сервис",
-				html: true,
-				placement: "top"
+
+		<!-- Футер -->
+		<footer>
+			<div class="row">
+				<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+					<p>АО «Уральская вагоноремонтная компания»<br>
+						455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
+						Телефон +7 (3519) 24-86-24<br>
+						Факс +7 (3519) 24-86-22<br>
+						Е-mail secretary@uvrk.ru</p>
+				</div>
+				<div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+					<p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
+						техники и в составе Globaltrans.</p>
+					<div class="row">
+						<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+							<a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
+									src="img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
+						</div>
+						<div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+							<a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
+									src="img/partners/opzt.png" height="70" alt="opzt"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<script>
+			$(document).ready(function () {
+				$('.grs').tooltip({
+					title: "Гарант рейл сервис",
+					html: true,
+					placement: "top"
+				});
+				$('.mmk').tooltip({
+					title: "Магнитогорский металлургический комбинат",
+					html: true,
+					placement: "top"
+				});
+				$('.np').tooltip({
+					title: "Новая перевозочная компания",
+					html: true,
+					placement: "top"
+				});
+				$('.tgk').tooltip({
+					title: "Трубная грузовая компания",
+					html: true,
+					placement: "top"
+				});
+				$('.cov').tooltip({
+					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+					html: true,
+					placement: "top"
+				});
+				$('.half-cov').tooltip({
+					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+					html: true,
+					placement: "top"
+				});
+				$('.platform').tooltip({
+					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+					html: true,
+					placement: "top"
+				});
+				$('.hopper').tooltip({
+					title: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ratione!",
+					html: true,
+					placement: "top"
+				});
 			});
-			$('.mmk').tooltip({
-				title: "Магнитогорский металлургический комбинат",
-				html: true,
-				placement: "top"
-			});
-			$('.np').tooltip({
-				title: "Новая перевозочная компания",
-				html: true,
-				placement: "top"
-			});
-			$('.tgk').tooltip({
-				title: "Трубная грузовая компания",
-				html: true,
-				placement: "top"
-			});
-		});
-	</script>
+		</script>
 
 </body>
 
