--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
 					<h5>26.06.2019</h5>
-					<img src="img/news-2.jpg" alt="news-img">
+					<img src="img/news-2.JPG" alt="news-img">
 					<a href="#" class="stretched-link">
 						<p>Сегодня на территории «УВК» был проведен субботник. В ходе него была убрана близлежащия
 							территория и обновлена разметка на парковке.</p>
