--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="js/SmoothScroll.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
 <title>Уральская вагоноремонтная компания</title>
 </head>
 
@@ -47,7 +46,7 @@
 						<a class="nav-link" href="#">Услуги</a>
 					</li>
 					<li class="nav-item text-uppercase">
-						<a class="nav-link" href="#">Контакты</a>
+						<a class="nav-link" href="pages/contacts.html">Контакты</a>
 					</li>
 				</ul>
 				<span class="phone-number">+7 (3519) 24-86-24</span>
@@ -173,45 +172,51 @@
 		<h4>Новости:</h4>
 		<div class="row">
 			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
-				<div class="news-block ">
-					<h5>Дата</h5>
-					<img src="img/news.png" alt="news-img">
-					<a href="#" class="stretched-link">
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam vitae earum voluptate mollitia reiciendis voluptates.</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
 				<div class="news-block">
-					<h5>01.05.2019</h5>
-					<img src="img/newsh.JPG" alt="news-img">
-					<a href="#" class="stretched-link">
-						<p>Сегодня сотрудники компании «УВК» приняли участие в демонстрации посвещенной  1 мая.</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
-				<div class="news-block">
-					<h5>26.06.2019</h5>
-					<img src="img/news-2.JPG" alt="news-img">
-					<a href="#" class="stretched-link">
-						<p>Сегодня на территории «УВК» был проведен субботник. В ходе него была убрана близлежащия
-							территория и обновлена разметка на парковке.</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
-				<div class="news-block">
-					<h5>06.04.2019</h5>
+					<h6>01.05.2019</h6>
 					<img src="img/news-3.jpg" alt="news-img">
 					<a href="#" class="stretched-link">
-						<p>Сегодня работники компании приняли участия в спортивных мероприятия приуроченных к Lorem,
-							ipsum.</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
+							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
+							accusantium tempore.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h6>01.05.2019</h6>
+					<img src="img/news-3.jpg" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, facere iste repudiandae
+							nisi sapiente repellat rerum laborum omnis beatae vitae eaque recusandae mollitia
+							accusantium tempore.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h6>26.06.2019</h6>
+					<img src="img/news-3.jpg" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur numquam suscipit
+							expedita minus sed officia eos libero. Laborum sit provident omnis vitae inventore ullam
+							unde.</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-xl-3">
+				<div class="news-block">
+					<h6>06.04.2019</h6>
+					<img src="img/news-3.jpg" alt="news-img">
+					<a href="#" class="stretched-link">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus illum accusamus facere non
+							voluptates quod consequuntur optio, omnis ab maiores, distinctio harum assumenda? Suscipit,
+							ut.</p>
 					</a>
 				</div>
 			</div>
 		</div>
-
+	</div>
 
 		<!-- Партнеры слайдер
 	<div id="carouselId" class="carousel slide" data-ride="carousel">
