--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="yandex-verification" content="2bce268d0db1d640" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favico/apple-touch-icon.png">
@@ -15,15 +16,39 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <title>Уральская вагоноремонтная компания</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full&skin=dark"></script>
+    <script type="text/javascript">
+        var map;
+        DG.then(function () {
+            map = DG.map('map', {
+                center: [53.4711, 59.05],
+                zoom: 15,
+                dragging: true,
+                touchZoom: true,
+                scrollWheelZoom: true,
+                doubleClickZoom: true,
+                boxZoom: true,
+                geoclicker: true,
+                zoomControl: true,
+                fullscreenControl: true
+            });
+            DG.marker([53.472, 59.0505]).addTo(map).bindPopup(popup);
+        });
+    </script>
+    <title>Контакты</title>
 </head>
 
 <body>
-    <div class="container">
+    <!-- Навбар -->
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png" height="25x" alt="uvk">
+                <img src="../img/logo.png" height="35" alt="uvk">
             </a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -32,73 +57,71 @@
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="about.html">О компании</a>
+                    <li class="nav-item text-uppercase">
+                        <a class="nav-link" href="#">О компании</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="repair-vagon.html">Услуги</a>
+                    <li class="nav-item text-uppercase">
+                        <a class="nav-link" href="#">Услуги</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-uppercase" href="#">Контакты</a>
+                    <li class="nav-item text-uppercase">
+                        <a class="nav-link" href="#">Контакты</a>
                     </li>
                 </ul>
-                <span class="email"><a href="mailto:info@uvrk.ru" title="Связаться с нами"><i
-                            class="fas fa-envelope"></i></a></span>
-                <span class="number-phone">+7 (3519) 24-86-24</span>
+                <span class="phone-number">+7 (3519) 24-86-24</span>
             </div>
         </nav>
+        <div class="name">
+            <p>Уральская<br>Вагоноремонтная<br>Компания</p>
+        </div>
     </div>
-    <table class="table">
-        <tbody>
-            <tr>
-                <td scope="row"><img src="../img/contacts/bodnar.jpg" alt="Боднар В.Е."></td>
-                <td>
-                    <p>Боднар<br> Виктор<br> Евгеньевич</p>
-                </td>
-                <td>
-                    <p>Генеральный<br> директор</p>
-                </td>
-                <td>
-                    <p>Тел: 24-86-20</p>
-                </td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/ryzanova.jpg" alt="Рузанова З.А."></td>
-                <td>Рузанова<br> Зоя<br> Александровна</td>
-                <td>Первый<br> заместитель<br> генерального<br> директора</td>
-                <td>Тел: 24-86-30</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/morin.jpg" alt="Морин В.В."></td>
-                <td>Морин<br> Виталий<br> Владимирович</td>
-                <td>Главный<br> инженер</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/yximenkova.jpg" alt="Юхименко Е.Г."></td>
-                <td>Юхименко<br> Елена<br> Геннадьевна</td>
-                <td>Заместитель<br> генерального<br> директора<br> по качеству<br> и технологии</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/bobrinskiy.jpg" alt="Бобринский В.Е."></td>
-                <td>Бобринский<br> Вячеслав<br> Александрович</td>
-                <td>Финансовый<br> директор</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-            <tr>
-                <td scope="row"><img src="../img/contacts/chanchicova.jpg" alt="Чанчикова Н.Н."></td>
-                <td>Чанчикова<br> Надежда<br> Николаевна</td>
-                <td>Начальник<br> отдела<br> сбыта</td>
-                <td>Тел: 24-86-20</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="container">
+    <div class="map">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <h5>Контакты</h5>
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <td scope="row">Генеральный директор</td>
+                            <td>Боднар Виктор Евгеньевич</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Первый заместитель генерального директора</td>
+                            <td> Рузанова Зоя Александровна</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Главный инженер</td>
+                            <td>Морин Виталий Владимирович</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Заместитель генерального директора по качеству и технологии</td>
+                            <td>Юхименко Елена Геннадьевна</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Финансовый директор</td>
+                            <td>Бобринский Вячеслав Александрович</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                        <tr>
+                            <td scope="row">Начальник отдела сбыта</td>
+                            <td>Чанчикова Надежда Николаевна</td>
+                            <td>Тел: 24-86-20<br> test@uvrk.ru</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <div id="map"></div>
+            </div>
+        </div>
+    </div>
+    <div class="requisites">
         <h5>Реквизиты:</h5>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="container">
                     <p><span>Акционерное общество «Уральская вагоноремонтная компания» (АО «УВК»)
                         </span></p>
@@ -112,7 +135,7 @@
                 <a class="btn" href="../doc/requisites.PDF" download="Реквизиты УВК" role="button"> <i
                         class="fas fa-download"></i>Скачать реквизиты </a>
             </div>
-            <div class="col-sm-6">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="container">
                     <p><span>ИНН:</span> 7705742646</p>
                     <p><span>КПП:</span> 745601001</p>
@@ -131,44 +154,30 @@
         </div>
     </div>
     <footer>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6">
-                    <p class="p-2">
-                        АО «Уральская вагоноремонтная компания»<br>
-                        455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
-                        Телефон +7 (3519) 24-86-24<br>
-                        Факс +7 (3519) 24-86-22<br>
-                        Е-mail secretary@uvrk.ru</p>
-                </div>
-                <div class="col-sm-6">
-                    <p class="p-2">
-                        Уральская вагоноремонтная компания состоит в составе
-                        объединения производителей железнодорожной техники
-                        и в составе Globaltrans
-                    </p>
-                    <div class="row">
-                        <div class="d-flex col-sm-6  justify-content-center">
-                            <a href="http://www.globaltrans.com" target="_blank" alt="глобалтранс"><img
-                                    src="../img/partners/globaltrans.png" alt="глобалтранс"></a>
-                        </div>
-                        <div class="d-flex col-sm-6  justify-content-center">
-                            <a href="http://opzt.ru" target="_blank" alt="опжт"><img class="opzht"
-                                    src="../img/partners/opzt.png" alt="опжт"></a>
-                        </div>
+        <div class="row">
+            <div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+                <p>АО «Уральская вагоноремонтная компания»<br>
+                    455005 Челябинская область г. Магнитогорск ул. Моховая д. 16<br>
+                    Телефон +7 (3519) 24-86-24<br>
+                    Факс +7 (3519) 24-86-22<br>
+                    Е-mail secretary@uvrk.ru</p>
+            </div>
+            <div class="footer col-12 col-md-6 col-xl-6 col-sm-12">
+                <p>Уральская вагоноремонтная компания состоит в составе объединения производителей железнодорожной
+                    техники и в составе Globaltrans.</p>
+                <div class="row">
+                    <div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+                        <a href="http://www.globaltrans.com" rel="noopener noreferrer" target="_blank"><img
+                                src="../img/partners/globaltrans.png" height="40" alt="globaltrans"></a>
+                    </div>
+                    <div class="img d-flex justify-content-center col-sm-12 col-12 col-xl-6">
+                        <a href="http://www.opzt.ru" rel="noopener noreferrer" target="_blank"><img
+                                src="../img/partners/opzt.png" height="70" alt="opzt"></a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/SmoothScroll.js"></script>
-    <script>
-        SmoothScroll({
-            keyboardSupport: false
-        })
-    </script>
-    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
